 - 3DS: Ensure core 2 can be used for threaded renderer (fixes mgba.io/i/1371)
 - GB Core: Fix toggling WIN and OBJ being swapped
 - All: Fix several memory leaks
 - LR35902: Fix trailing whitespace in disassembly
 - Qt: Fix adjusting magnification in tile viewer when not fitting to window
 - FFmpeg: Improve initialization reliability and cleanup
 - Wii: Fix aspect ratio (fixes mgba.io/i/500)
Misc:
 - GBA Savedata: EEPROM performance fixes
 - GBA Savedata: Automatically map 1Mbit Flash files as 1Mbit Flash
 - GB Memory: Support running from blocked memory
 - Qt: Don't unload ROM immediately if it crashes
 - Debugger: Add breakpoint and watchpoint listing
 - Qt: Add missing HEVC NVENC option (fixes mgba.io/i/1323)
 - LR35902: Support PC-relative opcode decoding
 - Qt: Improve camera initialization
 - Qt: Support switching webcams
 - Core: Add keysRead callback
 - Vita: Improved frame drawing speed
 - Qt: Cap window size on start to monitor size
 - GBA BIOS: Add timings for HLE BIOS math functions (fixes mgba.io/i/1396)
 - Debugger: Make tracing compatible with breakpoints/watchpoints
 - Debugger: Print breakpoint/watchpoint number when inserting
 - Qt: Open a message box for Qt frontend errors

0.7.1: (2019-02-24)
Bugfixes:
 - 3DS: Work around menu freezing (fixes mgba.io/i/1294)
 - GB: Fix crash when accessing SRAM if no save loaded and cartridge has no SRAM
 - GB Serialize: Fix loading states with negative pixel x (fixes mgba.io/i/1293)
 - GB, GBA Serialize: Fix loading two states in a row
 - GBA: Fix video timing when skipping BIOS (fixes mgba.io/i/1318)
 - GBA DMA: Fix Display Start DMAs
 - GBA DMA: Fix DMA start/end timing
 - GBA DMA: Fix invalid DMA handling (fixes mgba.io/i/1301)
 - GBA Memory: Fix a few AGBPrint crashes
 - GBA Memory: Fix OOB ROM reads showing up as AGBPrint memory
 - GBA SIO: Prevent writing read-only multiplayer bits
 - GBA Video: Fix enabling layers in non-tile modes (fixes mgba.io/i/1317)